📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13886,5 +13886,149 @@
         "published": "Mon, 15 Dec 2025 13:48:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46274478\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/tesla-starts-testing-robotaxis-in-austin-with-no-safety-driver/",
+        "title": "Tesla starts testing robotaxis in Austin with no safety driver",
+        "link": "https://techcrunch.com/2025/12/15/tesla-starts-testing-robotaxis-in-austin-with-no-safety-driver/",
+        "published": "Mon, 15 Dec 2025 15:16:26 +0000",
+        "source": "TechCrunch",
+        "summary": "It's one of the last big steps before the company can truly claim it's operating a robotaxi service, and start to take on Waymo."
+    },
+    {
+        "id": "https://www.theverge.com/news/844640/merriam-webster-ai-slop-word-of-the-year-2025",
+        "title": "Merriam-Webster\u2019s 2025 word of the year is \u2018slop\u2019",
+        "link": "https://www.theverge.com/news/844640/merriam-webster-ai-slop-word-of-the-year-2025",
+        "published": "2025-12-15T11:01:53-05:00",
+        "source": "The Verge",
+        "summary": "Merriam-Webster has settled on a word that represents 2025 - and that word is \"slop.\" The dictionary-maker defines \"slop\" as \"digital content of low quality that is produced usually in quantity by means of artificial intelligence,\" something that many people have become familiar with as AI-generated content permeates the internet. This year, some of the [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/844643/meta-quest-3s-echo-show-11-deal-sale",
+        "title": "The Meta Quest 3S is $50 off and is bundled with a $50 gift card and game",
+        "link": "https://www.theverge.com/gadgets/844643/meta-quest-3s-echo-show-11-deal-sale",
+        "published": "2025-12-15T11:01:13-05:00",
+        "source": "The Verge",
+        "summary": "If you\u2019re looking for a last-minute gift for a gamer, you\u2019re in luck. Both Best Buy and Target are offering the 128GB Meta Quest 3S VR headset for around $249 ($50 off) and include a $50 gift card on top of that. Best Buy has bundled the headset with a copy of The Walking Dead: [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/podcast/844073/stack-overflow-ceo-ai-coding-chatgpt-code-red-interview",
+        "title": "Stack Overflow users don\u2019t trust AI. They\u2019re using it anyway",
+        "link": "https://www.theverge.com/podcast/844073/stack-overflow-ceo-ai-coding-chatgpt-code-red-interview",
+        "published": "2025-12-15T10:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Today, I\u2019m talking with Prashanth Chandrasekar, who is the CEO of Stack Overflow. I last had Prashanth on the show in 2022, one month before ChatGPT launched. While the generative AI boom had tons of impact on all sorts of companies, it immediately upended everything about Stack Overflow in an existential way. Stack Overflow, if [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/information-technology/2025/12/roomba-maker-irobot-swept-into-bankruptcy/",
+        "title": "Roomba maker iRobot swept into bankruptcy",
+        "link": "https://arstechnica.com/information-technology/2025/12/roomba-maker-irobot-swept-into-bankruptcy/",
+        "published": "Mon, 15 Dec 2025 15:24:41 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Shenzhen-based Picea Robotics, its lender and primary supplier, will acquire all of iRobot\u2019s shares."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/swallowing-the-moon-and-other-new-indie-games-worth-checking-out-154937071.html?src=rss",
+        "title": "Swallowing the Moon and other new indie games worth checking out",
+        "link": "https://www.engadget.com/gaming/swallowing-the-moon-and-other-new-indie-games-worth-checking-out-154937071.html?src=rss",
+        "published": "Mon, 15 Dec 2025 15:49:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Welcome to our latest roundup of what's going on in the indie game space. Between <a class=\"link\" href=\"https://www.engadget.com/gaming/everything-announced-and-all-the-winners-at-the-game-awards-2025-044101761.html\" target=\"_blank\">The Game Awards</a> and showcases like <a class=\"link\" href=\"https://www.engadget.com/gaming/the-world-premieres-and-other-hotness-from-the-game-awards-2025-day-of-the-devs-stream-200000447.html\" target=\"_blank\">Day of the Devs</a>, Wholesome Snack, Latin American"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/music/spotify-was-down-this-morning-for-thousands-of-users-updates-on-the-widespread-outages-150453379.html?src=rss",
+        "title": "Spotify was down this morning for thousands of users: Updates on the widespread outages",
+        "link": "https://www.engadget.com/entertainment/music/spotify-was-down-this-morning-for-thousands-of-users-updates-on-the-widespread-outages-150453379.html?src=rss",
+        "published": "Mon, 15 Dec 2025 15:48:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>My boyfriend texted me those dreaded four words: &quot;Is your Spotify down?&quot; Sure enough his, mine and thousands of other users' Spotify accounts appear to be down and out at the moment, with <a class=\"link\" href=\"https://downdetector.co.uk/status/spotify/\" target=\"_blank\">Downdetector</a> recording over 10,000 reports from users.&nbsp;</p><p>Spotify is apparently working on the problem. The account, Spotify Status, <a class=\"link\" href=\"https://x.com/SpotifyStatus/status/20005779579375"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/tv-movies/new-stranger-things-trailer-hints-at-whats-next-for-our-heroes-152327474.html?src=rss",
+        "title": "New Stranger Things trailer hints at what's next for our heroes",
+        "link": "https://www.engadget.com/entertainment/tv-movies/new-stranger-things-trailer-hints-at-whats-next-for-our-heroes-152327474.html?src=rss",
+        "published": "Mon, 15 Dec 2025 15:23:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div><p><strong><em>Warning: the following contains spoilers for part one of Stranger Things season five</em></strong></p><p>With just over a week to go until Netflix releases the next batch of <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/netflix-went-down-for-some-viewers-after-stranger-things-premiered-025540635.html\" target=\"_blank\"><em>Stranger Things</em></a> episodes, the company has dropped "
+    },
+    {
+        "id": "https://gizmodo.com/new-clue-emerges-from-botched-scandinavian-raid-a-2300-year-old-fingerprint-2000699694",
+        "title": "New Clue Emerges From Botched Scandinavian Raid: A 2,300-Year-Old Fingerprint",
+        "link": "https://gizmodo.com/new-clue-emerges-from-botched-scandinavian-raid-a-2300-year-old-fingerprint-2000699694",
+        "published": "Mon, 15 Dec 2025 16:05:51 +0000",
+        "source": "Gizmodo",
+        "summary": "In the fourth century BCE, mysterious raiders attacked a Danish island. Now we might finally know where they came from."
+    },
+    {
+        "id": "https://gizmodo.com/it-welcome-to-derry-finale-spoilers-2000699387",
+        "title": "The 8 Biggest Takeaways From That Gruesome, Euphoric \u2018It: Welcome to Derry\u2019 Finale",
+        "link": "https://gizmodo.com/it-welcome-to-derry-finale-spoilers-2000699387",
+        "published": "Mon, 15 Dec 2025 16:00:43 +0000",
+        "source": "Gizmodo",
+        "summary": "Pennywise was always going to slither away for another 27-year slumber, but boy did he wave good-bye with gusto."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-meta-quest-3-deal",
+        "title": "The Meta Quest 3 is not only on sale at Amazon, it comes with a free $100 digital credit",
+        "link": "https://mashable.com/article/dec-15-meta-quest-3-deal",
+        "published": "Mon, 15 Dec 2025 15:33:09 +0000",
+        "source": "Mashable",
+        "summary": "The Meta Quest 3 (512GB) is on sale at Amazon for $407.10, down from the normal price of $499.99. That's a 19% discount and it comes with a free $100 digital credit from Amazon."
+    },
+    {
+        "id": "https://readwrite.com/san-diego-police-seize-62-illegal-slot-machines/",
+        "title": "San Diego police raid gambling sites, seize illegal slot machines drugs cash",
+        "link": "https://readwrite.com/san-diego-police-seize-62-illegal-slot-machines/",
+        "published": "Mon, 15 Dec 2025 15:23:01 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"San Diego police seize 62 slot machines, drugs and cash in illegal gambling busts. Exterior of a small auto shop building with a metal security gate and a sign reading \u201cMGK Auto,\u201d with a white truck parked in front, illustrating the location connected to a San Diego police illegal gambling bust where slot machines, drugs, and cash were seized.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/San-Diego-police-se"
+    },
+    {
+        "id": "https://www.zdnet.com/article/apple-tv-change-settings-faster/",
+        "title": "Own an Apple TV? I changed 12 settings to instantly make the system run like new again",
+        "link": "https://www.zdnet.com/article/apple-tv-change-settings-faster/",
+        "published": "Mon, 15 Dec 2025 15:57:00 GMT",
+        "source": "Latest news",
+        "summary": "These Apple TV tweaks can enhance your viewing experience, and here's what I recommend adjusting."
+    },
+    {
+        "id": "https://www.zdnet.com/article/irobot-files-bankruptcy/",
+        "title": "iRobot's bankruptcy could change your Roomba forever - here's how and why",
+        "link": "https://www.zdnet.com/article/irobot-files-bankruptcy/",
+        "published": "Mon, 15 Dec 2025 15:44:00 GMT",
+        "source": "Latest news",
+        "summary": "The company that pioneered the US robot vacuum market is no longer setting the pace in it. Here's what's to come."
+    },
+    {
+        "id": "https://www.zdnet.com/article/claude-code-vibe-coding-iphone-app-lessons/",
+        "title": "10 things I wish I knew before trusting Claude Code to build my iPhone app",
+        "link": "https://www.zdnet.com/article/claude-code-vibe-coding-iphone-app-lessons/",
+        "published": "Mon, 15 Dec 2025 15:28:30 GMT",
+        "source": "Latest news",
+        "summary": "Vibe coding sounds effortless, until it isn't. Building a full iPhone app with Claude Code showed me why baby steps, backups, and testing matter."
+    },
+    {
+        "id": "https://www.mlive.com/news/2025/12/thousands-of-us-farmers-have-parkinsons-they-blame-a-deadly-pesticide.html",
+        "title": "Thousands of U.S. farmers have Parkinson's. They blame a deadly pesticide",
+        "link": "https://www.mlive.com/news/2025/12/thousands-of-us-farmers-have-parkinsons-they-blame-a-deadly-pesticide.html",
+        "published": "Mon, 15 Dec 2025 14:37:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46275079\">Comments</a>"
+    },
+    {
+        "id": "https://web.stanford.edu/~jurafsky/slp3/",
+        "title": "Speech and Language Processing (3rd ed. draft)",
+        "link": "https://web.stanford.edu/~jurafsky/slp3/",
+        "published": "Mon, 08 Dec 2025 06:50:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46189205\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/15/1127432/the-fast-and-the-future-focused-are-revolutionizing-motorsport/",
+        "title": "The fast and the future-focused are revolutionizing motorsport",
+        "link": "https://www.technologyreview.com/2025/12/15/1127432/the-fast-and-the-future-focused-are-revolutionizing-motorsport/",
+        "published": "Mon, 15 Dec 2025 15:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "When the ABB FIA Formula E World Championship launched its first race through Beijing\u2019s Olympic Park in 2014, the idea of all-electric motorsport still bordered on experimental. Batteries couldn\u2019t yet last a full race, and drivers had to switch cars mid-competition. Just over a decade later, Formula E has evolved into a global entertainment brand&#8230;"
     }
 ]
