📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14030,5 +14030,189 @@
         "published": "Mon, 15 Dec 2025 15:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "When the ABB FIA Formula E World Championship launched its first race through Beijing\u2019s Olympic Park in 2014, the idea of all-electric motorsport still bordered on experimental. Batteries couldn\u2019t yet last a full race, and drivers had to switch cars mid-competition. Just over a decade later, Formula E has evolved into a global entertainment brand&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/zoom-brings-its-ai-assistant-to-the-web-with-access-to-free-users/",
+        "title": "Zoom brings its AI assistant to the web with access to free users",
+        "link": "https://techcrunch.com/2025/12/15/zoom-brings-its-ai-assistant-to-the-web-with-access-to-free-users/",
+        "published": "Mon, 15 Dec 2025 16:58:46 +0000",
+        "source": "TechCrunch",
+        "summary": "Zoom is allowing free users to try its AI assistant in limited capacity"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/netflix-responds-to-concerns-about-wbd-deal/",
+        "title": "Netflix responds to concerns about WBD deal",
+        "link": "https://techcrunch.com/2025/12/15/netflix-responds-to-concerns-about-wbd-deal/",
+        "published": "Mon, 15 Dec 2025 16:28:06 +0000",
+        "source": "TechCrunch",
+        "summary": "Industry concerns over Netflix acquiring Warner Bros has led executives to address fears regarding jobs and theatrical releases."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/facebook-messengers-desktop-app-is-no-more/",
+        "title": "Facebook Messenger\u2019s desktop app is no more",
+        "link": "https://techcrunch.com/2025/12/15/facebook-messengers-desktop-app-is-no-more/",
+        "published": "Mon, 15 Dec 2025 16:26:56 +0000",
+        "source": "TechCrunch",
+        "summary": "The app remains usable via the web, Facebook app, and through the mobile app for iOS and Android."
+    },
+    {
+        "id": "https://www.theverge.com/news/844616/tesla-robotaxis-spotted-on-public-roads-without-safety-monitors",
+        "title": "Tesla robotaxis spotted on public roads without safety monitors",
+        "link": "https://www.theverge.com/news/844616/tesla-robotaxis-spotted-on-public-roads-without-safety-monitors",
+        "published": "2025-12-15T12:01:23-05:00",
+        "source": "The Verge",
+        "summary": "After years of false promises and missed deadlines, several Tesla vehicles have been spotted over the weekend driving autonomously without safety monitors on public roads in Austin. For months, Tesla's robotaxis in Austin and San Francisco have included safety monitors with access to a kill switch in case of emergency - a fallback that Waymo [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844684/fallout-season-2-premiere-streaming-amazon-prime-video",
+        "title": "Fallout season 2 is streaming one day early",
+        "link": "https://www.theverge.com/news/844684/fallout-season-2-premiere-streaming-amazon-prime-video",
+        "published": "2025-12-15T12:00:20-05:00",
+        "source": "The Verge",
+        "summary": "The second season of Fallout is debuting one day earlier than previously announced: the new season will now launch on Tuesday, December 16th at 9PM ET / 6PM PT on Prime Video, Amazon says. The season will have eight episodes that will premiere weekly on Wednesdays (besides this first episode), with the season finale airing [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844655/gnome-linux-ai-shell-extensions-ban",
+        "title": "GNOME bans AI-generated extensions",
+        "link": "https://www.theverge.com/news/844655/gnome-linux-ai-shell-extensions-ban",
+        "published": "2025-12-15T11:17:43-05:00",
+        "source": "The Verge",
+        "summary": "Earlier this month, the GNOME Shell Extensions store updated its review guidelines to include a new section specifically stating that \"extensions must not be AI-generated,\" as reported by It's FOSS and Phoronix. Developers producing add-ons for the Linux desktop environment can still use AI as a tool, but if their extension's code contains signs of [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/in-2025-tech-giants-decided-smart-glasses-are-the-next-big-thing-163000812.html?src=rss",
+        "title": "In 2025, tech giants decided smart glasses are the next big thing",
+        "link": "https://www.engadget.com/wearables/in-2025-tech-giants-decided-smart-glasses-are-the-next-big-thing-163000812.html?src=rss",
+        "published": "Mon, 15 Dec 2025 16:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p></p><p>There's a growing sentiment that gadgets have gotten boring. And while I don't fully agree, I understand why people might feel that way. Just think about some of the novel device types that companies have tried to push since the original iPhone came out.&nbsp;</p><p><a class=\"link\" href=\"https://www.engadget.com/2015-04-28-sky-3d-channel-closing.html\" target=\"_blank\">3D TVs were a massive flop</a> and tablets still feel like <a class=\"link\" href=\"https://www.engadget.com/samsung-galaxy"
+    },
+    {
+        "id": "https://gizmodo.com/dreaming-of-a-white-christmas-dont-hold-your-breath-2000699726",
+        "title": "Dreaming of a White Christmas? Don\u2019t Hold Your Breath",
+        "link": "https://gizmodo.com/dreaming-of-a-white-christmas-dont-hold-your-breath-2000699726",
+        "published": "Mon, 15 Dec 2025 17:05:16 +0000",
+        "source": "Gizmodo",
+        "summary": "After a very cold and snowy start to December, temperatures will shift toward unseasonable warmth just in time for Christmas."
+    },
+    {
+        "id": "https://gizmodo.com/why-you-should-remember-the-roomba-even-after-irobot-is-kaput-2000699704",
+        "title": "Why You Should Remember the Roomba, Even After iRobot Is Kaput",
+        "link": "https://gizmodo.com/why-you-should-remember-the-roomba-even-after-irobot-is-kaput-2000699704",
+        "published": "Mon, 15 Dec 2025 16:43:29 +0000",
+        "source": "Gizmodo",
+        "summary": "While iRobot is selling itself off as scrap, let's remember what actually makes a good robovac."
+    },
+    {
+        "id": "https://gizmodo.com/high-tech-bubble-wrap-lets-you-literally-hold-fire-in-your-palm-2000699692",
+        "title": "High-Tech \u2018Bubble Wrap\u2019 Lets You Hold Fire Without Getting Burned",
+        "link": "https://gizmodo.com/high-tech-bubble-wrap-lets-you-literally-hold-fire-in-your-palm-2000699692",
+        "published": "Mon, 15 Dec 2025 16:35:32 +0000",
+        "source": "Gizmodo",
+        "summary": "Once applied to building windows, the thin insulator could save houses a lot of energy in the future."
+    },
+    {
+        "id": "https://mashable.com/article/google-home-gemini-continued-conversations",
+        "title": "A key Google AI feature is no longer free on Gemini for Home, and users arent happy",
+        "link": "https://mashable.com/article/google-home-gemini-continued-conversations",
+        "published": "Mon, 15 Dec 2025 16:27:38 +0000",
+        "source": "Mashable",
+        "summary": "Google appears to have places Continued Conversations behind a paywall on Gemini home."
+    },
+    {
+        "id": "https://mashable.com/article/grok-bondi-beach-misinformation",
+        "title": "Grok spread misinformation about the Bondi Beach shooting",
+        "link": "https://mashable.com/article/grok-bondi-beach-misinformation",
+        "published": "Mon, 15 Dec 2025 16:17:07 +0000",
+        "source": "Mashable",
+        "summary": "Grok generated false responses about the deadly shooting at Bondi Beach,"
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-asus-rog-swift-32-inch-gaming-monitor-deal",
+        "title": "The ASUS ROG Swift OLED 32-inch gaming monitor is back to its all-time low \u2014 but youd better hurry, this deal is selling fast",
+        "link": "https://mashable.com/article/dec-15-asus-rog-swift-32-inch-gaming-monitor-deal",
+        "published": "Mon, 15 Dec 2025 16:13:36 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 15, you can get the ASUS ROG Swift OLED 32-inch gaming monitor for $899, down from $1,299, at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/ios-iphone-android-photos-app-red-filter",
+        "title": "iOS 26 bug is turning Android photos red in iPhone camera app",
+        "link": "https://mashable.com/article/ios-iphone-android-photos-app-red-filter",
+        "published": "Mon, 15 Dec 2025 16:09:08 +0000",
+        "source": "Mashable",
+        "summary": "Photos taken on Android phones are appearing with a haunting red filter over them in the iPhone Photos app."
+    },
+    {
+        "id": "https://mashable.com/article/apple-google-block-nude-images-age-verification",
+        "title": "Apple, Google will be asked to block nude images until age is verified in the UK, report reveals",
+        "link": "https://mashable.com/article/apple-google-block-nude-images-age-verification",
+        "published": "Mon, 15 Dec 2025 16:04:33 +0000",
+        "source": "Mashable",
+        "summary": "The UK government plans to ask tech giants to block nude images without age verification."
+    },
+    {
+        "id": "https://readwrite.com/michigan-man-arrested-murder-mother-gamble/",
+        "title": "Michigan man arrested for murdering his mother and stealing her money to gamble",
+        "link": "https://readwrite.com/michigan-man-arrested-murder-mother-gamble/",
+        "published": "Mon, 15 Dec 2025 16:37:13 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"James Hall mugshot. Michigan man arrested for murdering his mother and stealing her money to gamble\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/James-Hall-mugshot-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A man in Michigan has been arrested under suspicion of a felony murder of his mother and stealing her money&#8230; <a class=\"more-link\" href=\"https://r"
+    },
+    {
+        "id": "https://www.zdnet.com/article/gemini-google-maps-visual-update-local-search/",
+        "title": "Gemini just got a stunning Google Maps upgrade that changes how you'll search locally - here's how",
+        "link": "https://www.zdnet.com/article/gemini-google-maps-visual-update-local-search/",
+        "published": "Mon, 15 Dec 2025 17:10:00 GMT",
+        "source": "Latest news",
+        "summary": "Goodbye walls of text. Hello rich visual guides that help you decide faster."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-gives-programmers-power-tools/",
+        "title": "Your programming career isn't over - AI just upgraded your toolbox",
+        "link": "https://www.zdnet.com/article/ai-gives-programmers-power-tools/",
+        "published": "Mon, 15 Dec 2025 16:51:38 GMT",
+        "source": "Latest news",
+        "summary": "Now that AI can write software, where does that leave you as a programmer? The answer lies in the past."
+    },
+    {
+        "id": "https://www.zdnet.com/article/firefox-search-engine-feature/",
+        "title": "Firefox just fixed my biggest annoyance with web browsers - and others should copy ASAP",
+        "link": "https://www.zdnet.com/article/firefox-search-engine-feature/",
+        "published": "Mon, 15 Dec 2025 16:46:00 GMT",
+        "source": "Latest news",
+        "summary": "Firefox has proved it's still in the game, with a new search feature that's highly customizable."
+    },
+    {
+        "id": "https://www.zdnet.com/article/terramaster-f4-425-nas-review/",
+        "title": "I set up a NAS system at home to keep my data safe - here's my buying advice now",
+        "link": "https://www.zdnet.com/article/terramaster-f4-425-nas-review/",
+        "published": "Mon, 15 Dec 2025 16:20:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're looking to break away from third-party file and directory storage, this NAS from Terramaster might be just what you need."
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/cp844kjj37vo",
+        "title": "Pro-democracy HK tycoon Jimmy Lai convicted in national security trial",
+        "link": "https://www.bbc.com/news/articles/cp844kjj37vo",
+        "published": "Mon, 15 Dec 2025 16:36:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46276740\">Comments</a>"
+    },
+    {
+        "id": "https://planetscale.com/blog/50-dollar-planetscale-metal-is-ga-for-postgres",
+        "title": "$50 PlanetScale Metal Is GA for Postgres",
+        "link": "https://planetscale.com/blog/50-dollar-planetscale-metal-is-ga-for-postgres",
+        "published": "Mon, 15 Dec 2025 16:11:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46276378\">Comments</a>"
+    },
+    {
+        "id": "https://news.ucsb.edu/2025/022239/new-ucsb-research-shows-p-computers-can-solve-spin-glass-problems-faster-quantum",
+        "title": "P-computers can solve spin-glass problems faster than quantum systems",
+        "link": "https://news.ucsb.edu/2025/022239/new-ucsb-research-shows-p-computers-can-solve-spin-glass-problems-faster-quantum",
+        "published": "Sun, 07 Dec 2025 16:38:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46182975\">Comments</a>"
     }
 ]
