📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14214,5 +14214,173 @@
         "published": "Sun, 07 Dec 2025 16:38:19 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46182975\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/threads-adds-new-communities-tests-badges-for-highly-engaged-members/",
+        "title": "Threads adds new communities, tests badges for highly engaged members",
+        "link": "https://techcrunch.com/2025/12/15/threads-adds-new-communities-tests-badges-for-highly-engaged-members/",
+        "published": "Mon, 15 Dec 2025 18:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Threads, which has more than 150 million daily active users, adds more communities to its platform."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/lidar-maker-luminar-files-for-bankruptcy/",
+        "title": "Lidar-maker Luminar files for bankruptcy",
+        "link": "https://techcrunch.com/2025/12/15/lidar-maker-luminar-files-for-bankruptcy/",
+        "published": "Mon, 15 Dec 2025 17:34:55 +0000",
+        "source": "TechCrunch",
+        "summary": "The filing marks the end of a tumultuous year full of layoffs, executive departures, and piling debts."
+    },
+    {
+        "id": "https://www.theverge.com/transportation/844697/gm-cadillac-chevy-apple-music-native",
+        "title": "Cadillac and Chevy are getting native Apple Music",
+        "link": "https://www.theverge.com/transportation/844697/gm-cadillac-chevy-apple-music-native",
+        "published": "2025-12-15T13:00:00-05:00",
+        "source": "The Verge",
+        "summary": "General Motors is adding native Apple Music to the infotainment systems of select 2025 model year Cadillac and Chevrolet vehicles, the company announced today. The news comes as the automaker is racing to add more native app experiences to some of its vehicles to make up for the absence of popular phone mirroring services like [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844700/google-dark-web-reports-shut-down",
+        "title": "Google&#8217;s turning off its dark web monitoring service that scoured data breaches for your info",
+        "link": "https://www.theverge.com/news/844700/google-dark-web-reports-shut-down",
+        "published": "2025-12-15T12:30:23-05:00",
+        "source": "The Verge",
+        "summary": "Google notified users in an email today that, beginning next month, it will stop sending its dark web reports, an opt-in feature that alerted users when Google detected their personal information on the dark web, as reported by 9to5Google. On January 15th, Google will stop scanning for that data, like contact info and home addresses, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/coop-pillow-sale-taylor-swift-2025/",
+        "title": "Get 22 Percent Off One of Our (and Taylor Swift\u2019s) Favorite Pillows",
+        "link": "https://www.wired.com/story/coop-pillow-sale-taylor-swift-2025/",
+        "published": "Mon, 15 Dec 2025 17:16:12 +0000",
+        "source": "WIRED",
+        "summary": "Eagle-eyed Swifties have ID\u2019d the star\u2019s pillow brand in a recent TV show appearance, and it\u2019s one of my favorites as well. Coop is having a special sale to commemorate the event."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/oh-look-yet-another-starship-clone-has-popped-up-in-china/",
+        "title": "Oh look, yet another Starship clone has popped up in China",
+        "link": "https://arstechnica.com/space/2025/12/oh-look-yet-another-starship-clone-has-popped-up-in-china/",
+        "published": "Mon, 15 Dec 2025 16:44:01 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Chinese companies are no longer hiding their intent to clone SpaceX. They're advertising it."
+    },
+    {
+        "id": "https://gizmodo.com/tesla-is-testing-robotaxis-without-safety-drivers-or-riders-2000699814",
+        "title": "Tesla Is Testing Robotaxis Without Safety Drivers \u2014 or Riders",
+        "link": "https://gizmodo.com/tesla-is-testing-robotaxis-without-safety-drivers-or-riders-2000699814",
+        "published": "Mon, 15 Dec 2025 18:12:08 +0000",
+        "source": "Gizmodo",
+        "summary": "Elon Musk confirmed that Tesla is testing its robotaxis without any safety monitors."
+    },
+    {
+        "id": "https://gizmodo.com/kindle-ask-this-book-ai-2000699503",
+        "title": "With New \u2018Ask this Book\u2019 Kindle Feature, Amazon Wants Lost Readers to Ask AI for Help",
+        "link": "https://gizmodo.com/kindle-ask-this-book-ai-2000699503",
+        "published": "Mon, 15 Dec 2025 18:00:21 +0000",
+        "source": "Gizmodo",
+        "summary": "There used to be this thing called \u201cflipping back a few pages.\u201d"
+    },
+    {
+        "id": "https://gizmodo.com/michael-cera-edgar-wright-running-man-2000699737",
+        "title": "Watch Michael Cera Return to Edgar Wright\u2019s World In New \u2018Running Man\u2019 Clip",
+        "link": "https://gizmodo.com/michael-cera-edgar-wright-running-man-2000699737",
+        "published": "Mon, 15 Dec 2025 18:00:20 +0000",
+        "source": "Gizmodo",
+        "summary": "Glen Powell stars in the adaptation of the Stephen King novel, which hits digital December 16."
+    },
+    {
+        "id": "https://gizmodo.com/fallout-season-2-early-release-date-amazon-2000699757",
+        "title": "\u2018Fallout\u2019 Season 2 Is Opening Up the Vault a Little Early",
+        "link": "https://gizmodo.com/fallout-season-2-early-release-date-amazon-2000699757",
+        "published": "Mon, 15 Dec 2025 17:47:35 +0000",
+        "source": "Gizmodo",
+        "summary": "Want to return to the wasteland a little earlier than Amazon planned? Okie dokie!"
+    },
+    {
+        "id": "https://gizmodo.com/its-time-to-give-mp3-players-a-second-chance-2000699677",
+        "title": "It\u2019s Time to Give MP3 Players a Second Chance",
+        "link": "https://gizmodo.com/its-time-to-give-mp3-players-a-second-chance-2000699677",
+        "published": "Mon, 15 Dec 2025 17:35:27 +0000",
+        "source": "Gizmodo",
+        "summary": "Spotify ain't what it used to be, and we may have the perfect antidote."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-hbo-max-dashpass-last-chance-deal",
+        "title": "Hurry \u2014\u00a0its your last chance to get HBO Max for free via DashPass",
+        "link": "https://mashable.com/article/dec-15-hbo-max-dashpass-last-chance-deal",
+        "published": "Mon, 15 Dec 2025 17:32:46 +0000",
+        "source": "Mashable",
+        "summary": "You can still get HBO Max for free with an annual DashPass plan for one more day. Secure the streaming deal by Dec. 16."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-sony-inzone-monitor-deal",
+        "title": "Get the Sony Inzone M9 II 27-inch 4K gaming monitor for $250 less at Amazon",
+        "link": "https://mashable.com/article/dec-15-sony-inzone-monitor-deal",
+        "published": "Mon, 15 Dec 2025 17:27:29 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 15, you can get the Sony Inzone M9 II 27-inch 4K gaming monitor for $698, down from $949.99, at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-apple-airtags-deal",
+        "title": "Traveling this holiday? Save $30 on a four-pack of Apple AirTags before you take off.",
+        "link": "https://mashable.com/article/dec-15-apple-airtags-deal",
+        "published": "Mon, 15 Dec 2025 17:24:00 +0000",
+        "source": "Mashable",
+        "summary": "A four-pack of Apple AirTags is on sale at Amazon for $69.99, down from the normal price of $99. That's a 29% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-bose-quietcomfort-ultra-headphones-deal",
+        "title": "The Bose QuietComfort Ultra headphones are down to their lowest price ever, but for a limited time only",
+        "link": "https://mashable.com/article/dec-15-bose-quietcomfort-ultra-headphones-deal",
+        "published": "Mon, 15 Dec 2025 17:20:20 +0000",
+        "source": "Mashable",
+        "summary": "The first generation Bose QuietComfort Ultra headphones are just $265 at Best Buy for Dec. 15 only."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-t-mobile-samsung-galaxy-s25-free-deal",
+        "title": "T-Mobile is giving away free Samsung Galaxy S25 phones \u2014 heres how to qualify for the deal",
+        "link": "https://mashable.com/article/dec-15-t-mobile-samsung-galaxy-s25-free-deal",
+        "published": "Mon, 15 Dec 2025 17:14:43 +0000",
+        "source": "Mashable",
+        "summary": "T-Mobile is giving away free Samsung Galaxy S25 phones if you switch to the T-Mobile Essentials promo plan this holiday season."
+    },
+    {
+        "id": "https://readwrite.com/macau-gaming-crime-rate-70-2025/",
+        "title": "Macau reports 70% rise in gaming-related crime cases in 2025",
+        "link": "https://readwrite.com/macau-gaming-crime-rate-70-2025/",
+        "published": "Mon, 15 Dec 2025 17:53:55 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"The GSS and GSC of Macau present crime statistics related to gaming for 2025.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/macau_press_crop_1200x800-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Gaming-related crime rate rose by 70% across 2025 in Macau, compared to the previous year, according to statistics from senior&#8230; <a class=\"more-link\" href=\"https"
+    },
+    {
+        "id": "https://readwrite.com/british-pakistan-influencer-zaraq-nazir-illegal-online-gambling-inquiry/",
+        "title": "British-Pakistani influencer Zaraq Nazir will appear in illegal online gambling inquiry",
+        "link": "https://readwrite.com/british-pakistan-influencer-zaraq-nazir-illegal-online-gambling-inquiry/",
+        "published": "Mon, 15 Dec 2025 17:33:26 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Zaraq Nazir. British-Pakistani influencer Zaraq Nazir will appear in illegal online gambling inquiry\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Zareq-Nasir-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>British-Pakistani influencer and online trader Zaraq Nazir has confirmed that he will return to Pakistan to take part in an&#8230; <a class=\"more-link\" href="
+    },
+    {
+        "id": "https://www.zdnet.com/article/rayneo-ar-glasses-review/",
+        "title": "I tried AR smart glasses with Gemini built in, but I'm not fully sold (yet)",
+        "link": "https://www.zdnet.com/article/rayneo-ar-glasses-review/",
+        "published": "Mon, 15 Dec 2025 17:18:00 GMT",
+        "source": "Latest news",
+        "summary": "The color display and integrated AI make a compelling product, but these glasses have some things to solve before I can recommend them."
+    },
+    {
+        "id": "https://www.science.org/doi/10.1126/sciadv.adx7892",
+        "title": "Cosmic-ray bath in a past supernova gives birth to Earth-like planets",
+        "link": "https://www.science.org/doi/10.1126/sciadv.adx7892",
+        "published": "Mon, 15 Dec 2025 17:01:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46277090\">Comments</a>"
+    },
+    {
+        "id": "https://en.wikipedia.org/wiki/Finnix",
+        "title": "Finnix",
+        "link": "https://en.wikipedia.org/wiki/Finnix",
+        "published": "Mon, 08 Dec 2025 06:20:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46189011\">Comments</a>"
     }
 ]
